# EagerMOT

./: .gitignore  README.md  pyproject.toml
src/eager_mot/: adapt_kitti_motsfusion_input.py  run_tracking.py  visualize.py
src/eager_mot/configs/: local_variables.py
src/eager_mot/dataset_classes/: mot_dataset.py  mot_frame.py  mot_sequence.py
src/eager_mot/dataset_classes/kitti/: mot_kitti.py  reporting.py
src/eager_mot/dataset_classes/nuscenes/: dataset.py  frame.py  reporting.py  sequence.py
src/eager_mot/inputs/: adapt_input.py  bbox.py  detection_2d.py  detections_2d.py  detections_3d.py  loading.py  utils.py  utils_io_ab3dmot.py
src/eager_mot/objects/: fused_instance.py
src/eager_mot/tracking/: data_association.py  tracking_manager.py  tracks.py  utils_association.py
src/eager_mot/transform/: kitti.py  nuscenes.py
src/eager_mot/utils/: utils_geometry.py  utils_viz.py
